--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -145,6 +145,12 @@ a,
   padding: 3px;
 }
 
+
+.modal-container{
+  max-height: 90vh !important;
+  overflow-y: auto !important;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
